bugfix unreadable footer copyright

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -11,11 +11,9 @@
 
   justify-content: space-around;
   align-items: center;
-
-  /* padding: 0 12.4rem; */
 }
 
 .copyright {
   color: var(--color-text);
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
